main / premier commit

--- a/src/pages/work.astro
+++ b/src/pages/work.astro
@@ -14,14 +14,14 @@ const projects = (await getCollection('work')).sort(
 ---
 
 <BaseLayout
-	title="My Work | Jeanine White"
-	description="Learn about Jeanine White's most recent projects"
+	title="Mes projets | "
+	description="Les projets sur lesquels j'ai travaillé."
 >
 	<div class="stack gap-20">
 		<main class="wrapper stack gap-8">
 			<Hero
-				title="My Work"
-				tagline="See my most recent projects below to get an idea of my past experience."
+				title="Projets"
+				tagline="Les projets sur lequels j'ai travaillé durant mon année d'alternance auprès d'Openclassroom et Heliop."
 				align="start"
 			/>
 			<Grid variant="offset">
