--- a/src/components/Skills.astro
+++ b/src/components/Skills.astro
@@ -3,21 +3,29 @@ import Icon from './Icon.astro';
 ---
 
 <section class="box skills">
-	<div class="stack gap-2 lg:gap-4">
-		<Icon icon="terminal-window" color="var(--accent-regular)" size="2.5rem" gradient />
-		<h2>Full Stack</h2>
-		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod.</p>
+	<div class="flex">
+		<h2>Front-end</h2>
+		<Icon icon="html" size="2.5rem" />
+		<Icon icon="css" size="2.5rem" />
+		<Icon icon="bootstrap" size="2.5rem" />
+		<Icon icon="js" size="2.5rem" />
 	</div>
-	<div class="stack gap-2 lg:gap-4">
-		<Icon icon="trophy" color="var(--accent-regular)" size="2.5rem" gradient />
-		<h2>Industry Leader</h2>
-		<p>Neque viverra justo nec ultrices dui. Est ultricies integer quis auctor elit.</p>
+	<div class="flex">
+		<!-- <Icon icon="trophy" color="var(--accent-regular)" size="2.5rem" gradient /> -->
+		<h2>Back-end</h2>
+		<Icon icon="laravel" size="2.5rem" />
+		<Icon icon="php" size="2.5rem" />
+		<Icon icon="sql" size="2.5rem" />
+		<Icon icon="mongoDb" size="2.5rem" />
+		<!-- <p>Neque viverra justo nec ultrices dui. Est ultricies integer quis auctor elit.</p> -->
 	</div>
-	<div class="stack gap-2 lg:gap-4">
-		<Icon icon="strategy" color="var(--accent-regular)" size="2.5rem" gradient />
-		<h2>Strategy-Minded</h2>
-		<p>Urna porttitor rhoncus dolor purus non enim praesent ornare.</p>
-	</div>
+	<div class="flex">
+		<!-- <Icon icon="strategy" color="var(--accent-regular)" size="2.5rem" gradient /> -->
+		<h2>Outils</h2>
+		<Icon icon="github" size="2.5rem" />
+		<Icon icon="vscode" size="2.5rem" />
+		<!-- <p>Urna porttitor rhoncus dolor purus non enim praesent ornare.</p> -->
+	</div> 
 </section>
 
 <style>
@@ -37,6 +45,7 @@ import Icon from './Icon.astro';
 
 	.skills h2 {
 		font-size: var(--text-lg);
+		padding-bottom: 1rem
 	}
 
 	.skills p {
