--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -7,7 +7,7 @@ import type { iconPaths } from './IconPaths';
 const textLinks: { label: string; href: string }[] = [
 	{ label: 'Accueil', href: '/' },
 	{ label: 'Projets', href: '/work/' },
-	{ label: 'A propos', href: '/about/' },
+	// { label: 'A propos', href: '/about/' },
 ];
 
 /** Icon links to social media — edit these with links to your profiles! */
