--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -31,12 +31,12 @@ const projects = (await getCollection('work'))
 			<header class="hero">
 				<Hero
 					title="Bonjour, Je m'appelle Elodie Soufflet"
-					tagline="Après des études d'histoire et six années dans la petite enfance, j'ai décidé de changer de métier. Je suis actuellement en alternance en tant que développeuse web."
+					tagline="Après des études d'histoire et six années dans la petite enfance, j'ai décidé de changer de métier. Je suis actuellement en alternance en tant que développeuse web fullstack."
 					align="start"
 				>
 					<div class="roles">
 						<!-- <Pill><Icon icon="code" size="1.33em" /> Developeur web</Pill> -->
-						<Pill><Icon icon="file" size="1.33em" /><a href ="assets/test.pdf" download> Télécharger mon CV</a></Pill>
+						<Pill><Icon icon="file" size="1.33em" /><a href ="assets/CV_Elodie_Soufflet.pdf" download> Télécharger mon CV</a></Pill>
 					</div>
 				</Hero>
 
