main / Création d'un dossier pour contenir les images des projets. Ajout d'icônes pour les skills. Ajout d'un projet et textes des projets retravaillé

--- a/src/components/Skills.astro
+++ b/src/components/Skills.astro
@@ -9,6 +9,8 @@ import Icon from './Icon.astro';
 		<Icon icon="css" size="2.5rem" />
 		<Icon icon="bootstrap" size="2.5rem" />
 		<Icon icon="js" size="2.5rem" />
+		<Icon icon="react" size="2.5rem" />
+		<Icon icon="astro" size="2.5rem" />
 	</div>
 	<div class="flex">
 		<!-- <Icon icon="trophy" color="var(--accent-regular)" size="2.5rem" gradient /> -->
@@ -24,6 +26,7 @@ import Icon from './Icon.astro';
 		<h2>Outils</h2>
 		<Icon icon="github" size="2.5rem" />
 		<Icon icon="vscode" size="2.5rem" />
+		<Icon icon="figma" size="2.5rem" />
 		<!-- <p>Urna porttitor rhoncus dolor purus non enim praesent ornare.</p> -->
 	</div> 
 </section>
