--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,7 +5,7 @@ import { getCollection } from 'astro:content';
 import BaseLayout from '../layouts/BaseLayout.astro';
 
 // Component Imports
-// import CallToAction from '../components/CallToAction.astro';
+import CallToAction from '../components/CallToAction.astro';
 import Grid from '../components/Grid.astro';
 import Hero from '../components/Hero.astro';
 import Icon from '../components/Icon.astro';
@@ -70,12 +70,12 @@ const projects = (await getCollection('work'))
 					</Grid>
 				</div>
 
-				<!-- <div class="cta">
+				<div class="cta">
 					<CallToAction href="/work/">
-						Let's go
+						En savoir plus
 						<Icon icon="arrow-right" size="1.2em" />
 					</CallToAction>
-				</div> -->
+				</div>
 			</section>
 
 		</main>
