--- a/src/pages/work.astro
+++ b/src/pages/work.astro
@@ -21,7 +21,7 @@ const projects = (await getCollection('work')).sort(
 		<main class="wrapper stack gap-8">
 			<Hero
 				title="Projets"
-				tagline="Les projets sur lequels j'ai travaillé durant mon année d'alternance auprès d'Openclassroom et Heliop."
+				tagline="Les projets sur lequels j'ai travaillé durant mon année d'alternance auprès d'Openclassroom et d'Heliop."
 				align="start"
 			/>
 			<Grid variant="offset">
