--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -21,8 +21,7 @@ const projects = (await getCollection('work'))
 	.sort((a, b) => b.data.publishDate.valueOf() - a.data.publishDate.valueOf())
 	.slice(0, 4);
 
-// Full Astro Component Syntax:
-// https://docs.astro.build/basics/astro-components/
+// Code fence to identify the component script in the component
 ---
 
 <BaseLayout>
@@ -35,7 +34,6 @@ const projects = (await getCollection('work'))
 					align="start"
 				>
 					<div class="roles">
-						<!-- <Pill><Icon icon="code" size="1.33em" /> Developeur web</Pill> -->
 						<Pill><Icon icon="file" size="1.33em" /><a href ="assets/CV_Elodie_Soufflet.pdf" download> Télécharger mon CV</a></Pill>
 					</div>
 				</Hero>
@@ -55,7 +53,6 @@ const projects = (await getCollection('work'))
 			<section class="section with-background with-cta">
 				<header class="section-header stack gap-2 lg:gap-4">
 					<h3>Projets</h3>
-					<!-- <p>Take a look below at some of my featured work for clients from the past few years.</p> -->
 				</header>
 
 				<div class="gallery">
