Les liens s'ouvrent dans une autre page.

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -8,7 +8,7 @@ const currentYear = new Date().getFullYear();
 		<p>&copy; {currentYear} Elodie Soufflet</p>
 	</div>
 	<p class="socials">
-		<a href="https://github.com/Selodie"> GitHub</a>
+		<a href="https://github.com/Selodie" target="_blank"> GitHub</a>
 	</p>
 </footer>
 <style>
