--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -30,7 +30,7 @@ const projects = (await getCollection('work'))
 			<header class="hero">
 				<Hero
 					title="Bonjour, Je m'appelle Elodie Soufflet"
-					tagline="Après des études d'histoire et six années dans la petite enfance, j'ai décidé de changer de métier. Je suis actuellement en alternance en tant que développeuse web fullstack."
+					tagline="Après des études d'histoire et six années dans la petite enfance, j'ai décidé de changer de métier. J'ai suivi une formation en alternance afin de devenir développeuse web fullstack."
 					align="start"
 				>
 					<div class="roles">
