main / retrait du skill astro

--- a/src/components/Skills.astro
+++ b/src/components/Skills.astro
@@ -23,9 +23,9 @@ import Icon from './Icon.astro';
 			<div title="React">
 				<Icon icon="react" size="3rem" />
 			</div>
-			<div title="Astro">
+			<!-- <div title="Astro">
 				<Icon icon="astro" size="3rem" />
-			</div>	
+			</div>	 -->
 		</div>
 	</div>
 	<div class="flex">
